fix: background image not showing on github pages

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/assets/bg-image.jpg);
+    background-image: url(./assets/bg-image.jpg);
     background-size:2000px;
     display: flex;
     justify-content: center;
